examples/test/testpolicy6974.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6974
  namespace: namespace229
spec:
  podSelector:
    matchLabels:
      key5: value1
      key49: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value17
          key24: value20
          key21: value1
      podSelector:
        matchLabels:
          key42: value41
          key34: value46
